# seal

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LldClient.cmake  README.md  TODO.md  assemble  b  compile_commands.json  generate-output.py  register-window-notes.md  shallow_rec.py  test.py  test.sh
.github/workflows/: main.yml
code/: allowed_unary.sl  comments.comp  error.comp  expression.comp  expression.sl  expression.txt  fib.sl  function.comp  function.sl  function.txt  illformed_types.comp  inferred_type.sl  infinite_loop.sl  ir.comp  main.comp  main.sl  parse_broken_expression.comp  recursion.comp  recursion.sl  simple.comp  simple.sl  simple_function.sl  weird_unary.comp  weird_unary.sl
code/fail_expected/: array_literal_symbolic.sl  nested_func.sl  parse_missing_fn_keyword.sl  parse_missing_return_type.sl
code/success_expected/: adding_to_vector.sl  array.sl  array_of_size_n.sl  arrays_are_taken_as_ref.sl  blocks.sl  call_c_function.sl  chained_function_calls.sl  double_index.sl  expression.sl  fib.sl  for_while.sl  function_args.sl  function_multiple_args.sl  function_simple.sl  ir.sl  length.sl  main.sl  negative_number.sl  nested_func_call.sl  readme.sl  recursion_shallow.sl  return_0.sl  return_value.sl  simple.sl  simple_function.sl  simple_struct.sl  string_concat.sl  string_format.sl  string_indexing.sl  struct.sl  weird_unary.sl
expected_output/code/fail_expected/: array_literal_symbolic.sl  error.sl  illformed_types.sl  nested_func.sl  parse_broken_expression.sl  parse_missing_fn_arrow.sl  parse_missing_fn_keyword.sl  parse_missing_return_type.sl
expected_output/code/success_expected/: adding_to_vector.sl  array.sl  arrays_are_taken_as_ref.sl  call_c_function.sl  fib.sl  function.sl  function_args.sl  length.sl  main.sl  readme.sl  simple.sl  simple_function.sl  string_format.sl  string_indexing.sl  weird_unary.sl
lib/argparse/: argparse.h
src/: CMakeLists.txt  Constants.cc  Constants.hh  CrashHandler.cc  CrashHandler.hh  CrashHelper.cc  CrashHelper.hh  DynLibLoader.cc  DynLibLoader.hh  Error.cc  Error.hh  Interpreter.cc  Interpreter.hh  Lexer.cc  Lexer.hh  Parser.cc  Parser.hh  Result.hh  SourceRef.cc  SourceRef.hh  Token.cc  Token.hh  TokenBuffer.cc  TokenBuffer.hh  TreeWalker.cc  TreeWalker.hh  Util.cc  Util.hh  main.cc
src/ast/: ArgumentList.cc  ArgumentList.hh  ArrayLiteral.cc  ArrayLiteral.hh  AssignExpression.cc  AssignExpression.hh  AstFwd.hh  AstVisitor.hh  BinaryExpression.cc  BinaryExpression.hh  Block.cc  Block.hh  BooleanLiteral.cc  BooleanLiteral.hh  CMakeLists.txt  CalculateExpression.cc  CalculateExpression.hh  CompareExpression.cc  CompareExpression.hh  CompilationUnit.cc  CompilationUnit.hh  Decl.hh  EqualityExpression.cc  EqualityExpression.hh  Expression.cc  Expression.hh  FloatLiteral.cc  FloatLiteral.hh  For.cc  For.hh  Function.cc  Function.hh  FunctionCall.cc  FunctionCall.hh  FunctionDecl.cc  FunctionDecl.hh  FunctionDeclC.cc  FunctionDeclC.hh  FunctionDeclUser.cc  FunctionDeclUser.hh  (+38 more)
src/base/: CMakeLists.txt  Logging.cc  Logging.hh
src/builtin/: Array.cc  BuiltIn.cc  BuiltIn.hh  CMakeLists.txt  Halt.cc  Length.cc  Print.cc
src/common/: BuiltinFunctionAddress.cc  BuiltinFunctionAddress.hh  CMakeLists.txt  ConstantPool.cc  ConstantPool.hh  Operand.cc  Operand.hh  PoolEntry.cc  PoolEntry.hh  Register.cc  RelocatedQuad.cc  RelocatedQuad.hh  Relocator.cc  Relocator.hh  Value.cc  Value.hh  ValuePool.cc  ValuePool.hh  ValueResolver.hh
src/dynlib/: CMakeLists.txt  DynLib.hh  DynLibLoader.cc  DynLibLoader.hh
src/interpreter/: CMakeLists.txt  CTypeWrapper.cc  CTypeWrapper.hh  Context.cc  Context.hh  FunctionResolver.cc  FunctionResolver.hh  InstructionAddress.cc  InstructionAddress.hh  InstructionSequencer.cc  InstructionSequencer.hh  Interpreter.cc  Interpreter.hh  LabelResolver.cc  LabelResolver.hh  RegisterWindow.cc  RegisterWindow.hh  StackFrame.cc  StackFrame.hh  String.hh  SystemRegisters.hh  Value.cc  Value.hh  ValueFactory.hh  Vector.hh
src/ir/: CMakeLists.txt  Generate.cc  Generate.hh  IrFunction.cc  IrFunction.hh  IrOperand.cc  IrOperand.hh  IrProgram.cc  IrProgram.hh  IrVariable.hh  OPCode.hh  Operand.cc  Operand.hh  OperandType.hh  Quad.cc  Quad.hh  QuadCollection.cc  QuadCollection.hh  QuadDest.hh  QuadSource.hh  Register.cc  Register.hh
src/parse/: ArgumentList.cc  ArrayLiteral.cc  Block.cc  Block.hh  CMakeLists.txt  Expression.cc  For.cc  Function.cc  Function.hh  FunctionDecl.cc  FunctionDecl.hh  IfStatement.cc  Node.hh  ParameterList.cc  ParameterList.hh  Parser.cc  Parser.hh  ReturnStatement.cc  Statement.cc  Struct.cc  Type.cc  VariableDecl.cc  While.cc
src/semantic/: CMakeLists.txt  Scope.cc  Scope.hh
src/sematic/: Scope.cc  Scope.hh
src/types/: CType.hh
src/utility/: CMakeLists.txt  StringTable.cc  StringTable.hh
